# tessellate

./: .gitignore  PROJECT-SPEC.md  README.md  README_DEV.md  agent_protocol.py  agent_server.py  agents.py  browser.html  check_thinking_tags.py  digitalocean_spec.yaml  evaluate_agents.py  example_rl_training.py  game-browser.js  game-pvp.js  gamebrowser_styles.css  generate_games.py  index.html  llm_game_interface.py  llm_tessellate_pvp.py  notes.md  package-lock.json  package.json  plan.md  pqn_inference.js  pqn_model.py  prepare_llm_data.py  progress_report.md  pyproject.toml  random_games_100.json  readme_tessellate.md  requirements.txt  rl_notes.md  sample_games_embedded.json  server.py  start_server.py  submission.ipynb  ta.py  tessellate.html  tessellate.py  tessellate_env.py  (+12 more)
checkpoints/: pqn_model_batch100_20250819_170515.pt  pqn_model_batch50_20250819_170514.pt
game_data/: game_directory.json
model/: pqn_model_batch50.json
old/: README.md  data_loader.py  example_llm_trajectory.json  export_pqn_to_json.py  fix_thinking_generation.py  game_state_utils.py  generate_reasoning.py  generate_reasoning_optimized.py  grpo_trainer.py  grpo_trainer_fixed.py  pqn_agent_cli.py  tessellate.py  tessellate_qlearning.ipynb  tessellate_window.py  test_qwen.py  test_tessellate_reasoning.py
old/RL/: tessellate_train.py
p2model/variables/: variables.index
tessellate/: game.py
tessellate/cli/: tessellate_openai_server.py  (+3 more)
tessellate/environments/tessellate_env/: README.md  pyproject.toml  tessellate_env.py
tools/: latency_stream.sh  test_stream_client.py
(+9 files in other folders)
