[project]
name = "tessellate-env"
description = "Tessellate verifiers env"
tags = ["RL", "game"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.2.post1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["tessellate_env.py"]
